Included a link to the strawman proposal thread in the group.

--- a/templates/main.tmpl
+++ b/templates/main.tmpl
@@ -5,10 +5,11 @@
 
 <p>
   This <a href="http://code.google.com/p/webfinger/">WebFinger</a>
-  client implements a simplified strawman proposal for
-  email-to-identity lookup.  Your email address probably won't work
-  with this form yet, but it could with just a few simple changes on
-  your site.
+  client implements a simplified <a
+  href="http://groups.google.com/group/webfinger/browse_thread/thread/dd568ba740f515c0">strawman
+  proposal</a> for email-to-identity lookup.  Your email address
+  probably won't work with this form yet, but it could with just a few
+  simple changes on your site.
 </p>
 
 <form action="/lookup" method="get">
