Removed everything but the XRD and well-know/host-meta capabilities.

--- a/templates/lookup.tmpl
+++ b/templates/lookup.tmpl
@@ -2,14 +2,10 @@
 
 {% block content %}
 <section>
- <h1>Found the following services for {{ addr_spec }}:</h1>
+ <h1>Found the following services for {{ identifier }}:</h1>
  <ul>
- {% for service in services %}
-   {% if service.title %}
-     <li><a href="{{service.href}}">{{service.title}}</a></li>
-   {% else %}
-     <li><a href="{{service.href}}">{{service.href}}</a></li>
-   {% endif %}
+ {% for description in descriptions %}
+   <code><pre>{{ description }}</pre></code>
  {% endfor %}
  </ul>
 </section>
