--- a/templates/main.tmpl
+++ b/templates/main.tmpl
@@ -1,21 +1,16 @@
 {% extends "layout.tmpl" %}
 
 {% block content %}
-<h1>A Simple WebFinger-like client</h1>
+<h1>WebFinger client</h1>
 
 <p>
-  This <a href="http://code.google.com/p/webfinger/">WebFinger</a>-like
-  client implements a simplified <a
-  href="http://groups.google.com/group/webfinger/browse_thread/thread/dd568ba740f515c0">strawman
-  proposal</a> for email-to-identity lookup.  Your email address
-  probably won't work with this form yet, but it could with just a few
-  simple changes on your site.  Be sure to read the WebFinger site for the 
-  real protocol proposal.
+  This <a href="http://code.google.com/p/webfinger/">WebFinger</a>
+  client implements account to service lookup.
 </p>
 
 <form action="/lookup" method="get">
  <fieldset>
-  <legend>Email-like identifier to profile lookup</legend>
+  <legend>Account identifier to service lookup</legend>
   {% if error %}
   <p>
    <label class="error">Error:</label>
@@ -26,7 +21,7 @@
    <label for="identifier">Identifier:</label> 
    <input name="identifier" type="text" tabindex="1"> <input type="submit" value="Lookup">
    <br>
-   <span class="example">For example: dewitt&#64;unto.net</span>
+   <span class="example">For example: dclinton&#64;gmail.com, acct:bradfitz&#64;gmail.com</span>
   </p>
  </fieldset>
 </form>
