--- a/static/css/style.css
+++ b/static/css/style.css
@@ -243,3 +243,8 @@ input[type=text], input.text, input.title, textarea, select {
   margin: 0;
 }
 
+/* Non-semantic classes */
+
+.description {
+  border: thin solid #CCC;
+}
