--- a/templates/layout.tmpl
+++ b/templates/layout.tmpl
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8"/>
-    <title>Simple WebFinger strawman client</title>
+    <title>WebFinger client</title>
     <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/combo?2.7.0/build/reset-fonts/reset-fonts.css&amp;2.7.0/build/base/base-min.css"/>
     <link rel="stylesheet" type="text/css" href="/css/style.css"/>
     <script  type="text/javascript">
