Added support for html output, binary protobuf output, ascii protobuf output, json output, and jsonp output

--- a/templates/main.tmpl
+++ b/templates/main.tmpl
@@ -19,9 +19,22 @@
   {% endif %}
   <p>
    <label for="identifier">Identifier:</label> 
-   <input name="identifier" type="text" tabindex="1"> <input type="submit" value="Lookup">
+   <input name="identifier" type="text"> <input type="submit" value="Lookup">
    <br>
    <span class="example">For example: dclinton&#64;gmail.com, acct:bradfitz&#64;gmail.com</span>
+  </p>
+  <p>
+    <label for="format">Format:</label>
+    <input name="format" type="radio" value="web" checked="">Web</input>
+    <input name="format" type="radio" value="html">HTML</input>
+    <input name="format" type="radio" value="protoa">Protobuf (ascii)</input>
+    <input name="format" type="radio" value="proto">Protobuf (binary)</input>
+    <input name="format" type="radio" value="json">JSON</input>
+    <br>
+    <span class="example">
+      Use 'callback=...' for JSONP callbacks.
+      Use 'pretty=true' for JSON debugging.
+    </span> 
   </p>
  </fieldset>
 </form>
