--- a/templates/layout.tmpl
+++ b/templates/layout.tmpl
@@ -5,12 +5,13 @@
     <title>WebFinger client</title>
     <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/combo?2.7.0/build/reset-fonts/reset-fonts.css&amp;2.7.0/build/base/base-min.css"/>
     <link rel="stylesheet" type="text/css" href="/css/style.css"/>
-    <script  type="text/javascript">
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"/>
+    <script type="text/javascript">
     //<![CDATA[
       // Help IE style HTML5. This makes me sad.
       // See http://remysharp.com/2009/01/07/html5-enabling-script/
       (function(){if(!/*@cc_on!@*/0)return;var e = "abbr,article,aside,audio,bb,canvas,datagrid,datalist,details,dialog,eventsource,figure,footer,header,mark,menu,meter,nav,output,progress,section,time,video".split(','),i=e.length;while (i--){document.createElement(e[i])}})()
-    //]]
+    //]]>
     </script>
   </head>
   
@@ -33,4 +34,7 @@
       </p>
     </footer>
   </body>
+  <script text="text/javascript">
+    $(":input:first").focus();  
+  </script>
 </html>
