Minor change to the hint text on the homepage.

--- a/templates/main.tmpl
+++ b/templates/main.tmpl
@@ -32,7 +32,7 @@
     <input name="format" type="radio" value="json">JSON</input>
     <br>
     <span class="example">
-      Use 'callback=...' for JSONP callbacks.
+      Use 'callback=f' for JSONP callbacks.
       Use 'pretty=true' for JSON debugging.
     </span> 
   </p>
